# QTAnimations

./: Jurassic_Park_Hacker_guy.py  README.md  batman.py  joker.py  moving_man.py  sunflower.py
CPP_code/: CMakeLists.txt  main.cpp  mani.pro
T-Virus/: CMakeLists.txt  main.cpp  main2.cpp
